before version upgrade